# Subnet

./: .gitignore  LICENCE  LICENSE  README.md  pyproject.toml  requirements.txt
neurons/: miner.py  validator.py
src/checker-chain/: cli.py  sqlite_utils.py  utils.py
src/checker-chain-subnet/miner/: llm.py  util.py
src/checker-chain-subnet/models/: reviewed_product.py  unreviewed_product.py
src/checker-chain-subnet/validator/: validator.py
src/checker-chain-subnet/validator/database/: utils.py
src/checker-chain/miner/: model.py  sample.py
src/checker-chain/models/: common.py
src/checker-chain/validator/: _config.py  sample.py  sample2.py  util.py  validator.py
src/checker-chain/validator/database/: utils.py
template/: protocol.py
template/base/: neuron.py  validator.py
template/utils/: checker_chain.py  llm.py  simulator.py
template/validator/: forward.py  reward.py
