[tool.poetry]
name = "checker-chain-subnet"
version = "0.0.1"
description = ""
readme = "README.md"
packages = [
    { include = "checker-chain", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
communex = "^0.1.36.5"
typer = "^0.9.0"
uvicorn = "^0.29.0"
keylimiter = "^0.1.5"
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.386"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
