[tool.poetry]
name = "checker-chain"
version = "0.0.1"
description = ""
readme = "README.md"
packages = [
    { include = "checker-chain", from = "src" }
]
[tool.poetry.dependencies]
python = "^3.11"

communex = "^0.1.34.6"
requests = "^2.32.3"
uvicorn = "^0.29.0"
keylimiter = "^0.1.5"
pydantic-settings = "^2.6.0"
typer = "^0.9.0"
langchain = "^0.3"
langchain_openai = "^0.3"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.386"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
